--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -44,8 +44,8 @@ event_player:
   #=========== CONTROLS WHEN WORLDS ARE STARTED ============
   #START WORLD 1
   mode_base_started{current_player.world_id==0}:
-    world1_start
-    #world5_start
+    #world1_start
+    world5_start
     #theend_start
 
   #ENABLE NEXT WORLDS WHEN NETHER MODE RETURNS
@@ -57,8 +57,8 @@ event_player:
     world4_start
   multiball_nethermb_ended{current_player.world_id==4}:
     world5_start
-  stronghold_jackpotcollected:
-    theend_start
+  #stronghold_jackpotcollected:
+  #  theend_start
 
   world1_collected{current_player.multiplier_mb==1}:
     - nethermode_ready
